--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
     src: url(../fontes/idroid.otf);
 }
 
+* { 
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+}
+
 body {
     background-color: #aee0c4;
     margin: 0px;
@@ -14,6 +20,7 @@ header {
     color: white;
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.349);
+    width: 100%;
 }
 
 header > p, h1 {
@@ -33,7 +40,9 @@ header > p {
 } 
 
 nav > a {
+    width: 100%;
     padding: 10px;
+    margin: auto;
     margin-right: 10px;
     text-decoration: none;
     color: white;
