--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ nav > a {
 nav > a:hover {
     background-color: #84e1ad;
     padding: 10px;
+    margin: auto;
     border-radius: 10px;
     color: #A81B0D;
     transition-duration: .5s;
