--- a/style.css
+++ b/style.css
@@ -39,6 +39,10 @@ header > p {
     font-family:Arial, Helvetica, sans-serif;
 } 
 
+nav {
+    padding: 10px;
+}
+
 nav > a {
     width: 100%;
     padding: 10px;
